# Sprout

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: activation.rs  conv_params.rs  convolution_params.rs  dense_params.rs  layer.rs  layer_builder.rs  lib.rs  loss_function.rs  main.rs  network.rs
