[package]
name = "sproutml"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A simple Machine Learning Library built in Rust"
repository = "https://github.com/Chigo042823/Sprout"
readme = "README.md"
exclude = [
    "*.json",
    "*.png",
    "src/main.rs",
    ".vscode",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
rand = "0.8.5"
rayon = "1.9.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
